test: subject: include package json scripts

--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -5,10 +5,10 @@ on:
     paths-ignore:
       - "README.md"
       - "docs/**"
-  pull_request:
-    paths-ignore:
-      - "README.md"
-      - "docs/**"
+  # pull_request:
+  #   paths-ignore:
+  #     - "README.md"
+  #     - "docs/**"
 
 jobs:
   build-and-unit-tests:
