test: subject: include package json scripts

--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -5,10 +5,6 @@ on:
     paths-ignore:
       - "README.md"
       - "docs/**"
-  # pull_request:
-  #   paths-ignore:
-  #     - "README.md"
-  #     - "docs/**"
 
 jobs:
   build-and-unit-tests:
@@ -321,10 +317,16 @@ jobs:
         with:
           node-version: "12.x"
 
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+        working-directory: nhs-vv-build
+
       - name: "Run Azure webapp deploy action using publish profile credentials"
         uses: azure/webapps-deploy@v2
         with:
           app-name: "virtualvisitscode"
           slot-name: "production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
-          package: .
+          package: nhs-vv-build
