--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -321,7 +321,6 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-        working-directory: nhs-vv-build
 
       - name: "Run Azure webapp deploy action using publish profile credentials"
         uses: azure/webapps-deploy@v2
@@ -329,4 +328,4 @@ jobs:
           app-name: "virtualvisitscode"
           slot-name: "production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
-          package: nhs-vv-build
+          package: .
