--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -325,7 +325,7 @@ jobs:
       - name: "Run Azure webapp deploy action using publish profile credentials"
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "virtualvisitscode"
-          slot-name: "production"
+          app-name: ${{ secrets.AZUREAPPSERVICE_APP_NAME }}
+          slot-name: ${{ secrets.AZUREAPPSERVICE_SLOT_NAME }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
           package: .
