--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -6,6 +6,11 @@ on:
       - "README.md"
       - "docs/**"
 
+  pull_request:
+    paths-ignore:
+      - "README.md"
+      - "docs/**"
+
 jobs:
   # build-and-unit-tests:
   #   runs-on: ubuntu-latest
