--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -260,26 +260,32 @@ jobs:
   #     - name: run migration tests
   #       run: npm run test:migration
 
-  # tag-and-release:
-  #   runs-on: ubuntu-latest
-  #   needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Conventional Changelog Action
-  #       uses: TriPSs/conventional-changelog-action@v3
-  #       id: changelog
-  #       with:
-  #         github-token: ${{ secrets.github_token }}
-  #         output-file: "CHANGELOG.md"
-  #     - name: Create Release
-  #       uses: actions/create-release@v1
-  #       if: ${{ steps.changelog.outputs.skipped == 'false' }}
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.github_token }}
-  #       with:
-  #         tag_name: ${{ steps.changelog.outputs.tag }}
-  #         release_name: ${{ steps.changelog.outputs.tag }}
-  #         body: ${{ steps.changelog.outputs.clean_changelog }}
+  tag-and-release:
+    runs-on: ubuntu-latest
+    # needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Create Release Folder
+        run: rsync -arv --exclude='.git/' --exclude='.github/' --exclude='.gitignore' --exclude='__mocks__/' --exclude='test/' --exclude='docs/' --exclude='docker/' --exclude='cypress' --exclude='contractTest/' --exclude='bin/' . ./release
+      - name: Switch to Release Folder
+        run: |
+          cd release
+          ls -la
+      - name: Conventional Changelog Action
+        uses: TriPSs/conventional-changelog-action@v3
+        id: changelog
+        with:
+          github-token: ${{ secrets.github_token }}
+          output-file: "CHANGELOG.md"
+      - name: Create Release
+        uses: actions/create-release@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        with:
+          tag_name: ${{ steps.changelog.outputs.tag }}
+          release_name: ${{ steps.changelog.outputs.tag }}
+          body: ${{ steps.changelog.outputs.clean_changelog }}
 
   azure-build-and-deploy:
     # needs: tag-and-release
@@ -291,41 +297,15 @@ jobs:
       - name: "Checkout Github Action"
         uses: actions/checkout@master
 
-      - name: Create .env file
-        env:
-          API_KEY: ${{ secrets.API_KEY }}
+      # - name: Set up Node 12
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: "12.x"
 
-          MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
-          MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
-          MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
-          MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
-          MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
-          EMAIL_INITIAL_TEMPLATE_ID: ${{ secrets.EMAIL_INITIAL_TEMPLATE_ID }}
-          EMAIL_JOIN_TEMPLATE_ID: ${{ secrets.EMAIL_JOIN_TEMPLATE_ID }}
-          EMAIL_UPDATED_VISIT_TEMPLATE_ID: ${{ secrets.EMAIL_UPDATED_VISIT_TEMPLATE_ID }}
-          SMS_INITIAL_TEMPLATE_ID: ${{ secrets.SMS_INITIAL_TEMPLATE_ID }}
-          SMS_JOIN_TEMPLATE_ID: ${{ secrets.SMS_JOIN_TEMPLATE_ID }}
-          SMS_UPDATED_VISIT_TEMPLATE_ID: ${{ secrets.SMS_UPDATED_VISIT_TEMPLATE_ID }}
-          JWT_SIGNING_KEY: ${{ secrets.JWT_SIGNING_KEY }}
-          WHEREBY_API_KEY: ${{ secrets.WHEREBY_API_KEY }}
-          WHEREBY_SUBDOMAIN: ${{ secrets.WHEREBY_SUBDOMAIN }}
-          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
-          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          ENABLE_SENTRY: ${{ secrets.ENABLE_SENTRY }}
-          ENABLE_UR_QUESTION: ${{ secrets.ENABLE_UR_QUESTION }}
-        run: bin/write_environment.sh
-
-      - name: Set up Node 12
-        uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
-
-      - name: npm install and build
-        run: |
-          npm install
-          npm run build --if-present
+      # - name: npm install and build
+      #   run: |
+      #     npm install
+      #     npm run build --if-present
 
       - name: "Run Azure webapp deploy action using publish profile credentials"
         uses: azure/webapps-deploy@v2
@@ -333,4 +313,4 @@ jobs:
           app-name: ${{ secrets.AZUREAPPSERVICE_APP_NAME }}
           slot-name: ${{ secrets.AZUREAPPSERVICE_SLOT_NAME }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
-          package: .
+          package: ./release
