--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -260,31 +260,31 @@ jobs:
   #     - name: run migration tests
   #       run: npm run test:migration
 
-  tag-and-release:
-    runs-on: ubuntu-latest
-    # needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
-    steps:
-      - uses: actions/checkout@v2
+  # tag-and-release:
+  #   runs-on: ubuntu-latest
+  #   needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Conventional Changelog Action
-        uses: TriPSs/conventional-changelog-action@v3
-        id: changelog
-        with:
-          github-token: ${{ secrets.github_token }}
-          output-file: "CHANGELOG.md"
+  #     - name: Conventional Changelog Action
+  #       uses: TriPSs/conventional-changelog-action@v3
+  #       id: changelog
+  #       with:
+  #         github-token: ${{ secrets.github_token }}
+  #         output-file: "CHANGELOG.md"
 
-      - name: Create Release
-        uses: actions/create-release@v1
-        if: ${{ steps.changelog.outputs.skipped == 'false' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
-        with:
-          tag_name: ${{ steps.changelog.outputs.tag }}
-          release_name: ${{ steps.changelog.outputs.tag }}
-          body: ${{ steps.changelog.outputs.clean_changelog }}
+  #     - name: Create Release
+  #       uses: actions/create-release@v1
+  #       if: ${{ steps.changelog.outputs.skipped == 'false' }}
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.github_token }}
+  #       with:
+  #         tag_name: ${{ steps.changelog.outputs.tag }}
+  #         release_name: ${{ steps.changelog.outputs.tag }}
+  #         body: ${{ steps.changelog.outputs.clean_changelog }}
 
   azure-build-and-deploy:
-    needs: tag-and-release
+    # needs: tag-and-release
     if: github.repository_owner == 'madetech'
     runs-on: ubuntu-latest
 
