--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -293,18 +293,18 @@ jobs:
       - name: "Checkout Github Action"
         uses: actions/checkout@master
 
-      - name: Set up Node 12
-        uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
+      # - name: Set up Node 12
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: "12.x"
 
-      - name: npm install and build
-        run: |
-          npm install
-          npm run build --if-present
+      # - name: npm install and build
+      #   run: |
+      #     npm install
+      #     npm run build --if-present
 
       - name: Create Release Folder
-        run: rsync -arv --exclude='.git/' --exclude='.github/' --exclude='.gitignore' --exclude='__mocks__/' --exclude='test/' --exclude='docs/' --exclude='docker/' --exclude='cypress' --exclude='contractTest/' --exclude='bin/' --exclude='db/' . ./release
+        run: rsync -arv --exclude='.git/' --exclude='.github/' --exclude='.gitignore' --exclude='__mocks__/' --exclude='test/' --exclude='docs/' --exclude='docker/' --exclude='cypress' --exclude='contractTest/' --exclude='bin/' --exclude='db/' --exclude='node_modules/' . ./release
 
       - name: Switch to Release Folder
         run: |
@@ -317,4 +317,4 @@ jobs:
           app-name: ${{ secrets.AZUREAPPSERVICE_APP_NAME }}
           slot-name: ${{ secrets.AZUREAPPSERVICE_SLOT_NAME }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
-          # package: .
+          package: .
