--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -287,7 +287,7 @@ jobs:
 
   azure-build-and-deploy:
     needs: tag-and-release
-    if: github.repository_owner == 'madetech'
+    if: github.repository_owner == 'madetech' && github.event.pull_request.merged == 'true'
     runs-on: ubuntu-latest
 
     steps:
