--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -262,61 +262,61 @@ jobs:
       - name: run migration tests
         run: npm run test:migration
 
-  tag-and-release:
-    runs-on: ubuntu-latest
-    needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
-    steps:
-      - uses: actions/checkout@v2
+  # tag-and-release:
+  #   runs-on: ubuntu-latest
+  #   needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Conventional Changelog Action
-        uses: TriPSs/conventional-changelog-action@v3
-        id: changelog
-        with:
-          github-token: ${{ secrets.github_token }}
-          output-file: "CHANGELOG.md"
+  #     - name: Conventional Changelog Action
+  #       uses: TriPSs/conventional-changelog-action@v3
+  #       id: changelog
+  #       with:
+  #         github-token: ${{ secrets.github_token }}
+  #         output-file: "CHANGELOG.md"
 
-      - name: Create Release
-        uses: actions/create-release@v1
-        if: ${{ steps.changelog.outputs.skipped == 'false' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
-        with:
-          tag_name: ${{ steps.changelog.outputs.tag }}
-          release_name: ${{ steps.changelog.outputs.tag }}
-          body: ${{ steps.changelog.outputs.clean_changelog }}
+  #     - name: Create Release
+  #       uses: actions/create-release@v1
+  #       if: ${{ steps.changelog.outputs.skipped == 'false' }}
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.github_token }}
+  #       with:
+  #         tag_name: ${{ steps.changelog.outputs.tag }}
+  #         release_name: ${{ steps.changelog.outputs.tag }}
+  #         body: ${{ steps.changelog.outputs.clean_changelog }}
 
-  azure-build-and-deploy:
-    needs: tag-and-release
-    if: github.repository_owner == 'madetech' && github.event.pull_request.merged == 'true'
-    runs-on: ubuntu-latest
+  # azure-build-and-deploy:
+  #   needs: tag-and-release
+  #   if: github.repository_owner == 'madetech' && github.event.pull_request.merged == 'true'
+  #   runs-on: ubuntu-latest
 
-    steps:
-      # checkout the repo
-      - name: "Checkout Github Action"
-        uses: actions/checkout@master
+  #   steps:
+  #     # checkout the repo
+  #     - name: "Checkout Github Action"
+  #       uses: actions/checkout@master
 
-      # - name: Set up Node 12
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: "12.x"
+  #     # - name: Set up Node 12
+  #     #   uses: actions/setup-node@v1
+  #     #   with:
+  #     #     node-version: "12.x"
 
-      # - name: npm install and build
-      #   run: |
-      #     npm install
-      #     npm run build --if-present
+  #     # - name: npm install and build
+  #     #   run: |
+  #     #     npm install
+  #     #     npm run build --if-present
 
-      - name: Create Release Folder
-        run: rsync -arv --exclude='.git/' --exclude='.github/' --exclude='.gitignore' --exclude='__mocks__/' --exclude='test/' --exclude='docs/' --exclude='docker/' --exclude='cypress' --exclude='contractTest/' --exclude='bin/' --exclude='db/' --exclude='node_modules/' . ./release
+  #     - name: Create Release Folder
+  #       run: rsync -arv --exclude='.git/' --exclude='.github/' --exclude='.gitignore' --exclude='__mocks__/' --exclude='test/' --exclude='docs/' --exclude='docker/' --exclude='cypress' --exclude='contractTest/' --exclude='bin/' --exclude='db/' --exclude='node_modules/' . ./release
 
-      - name: Switch to Release Folder
-        run: |
-          cd release
-          ls -la
+  #     - name: Switch to Release Folder
+  #       run: |
+  #         cd release
+  #         ls -la
 
-      - name: "Run Azure webapp deploy action using publish profile credentials"
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ secrets.AZUREAPPSERVICE_APP_NAME }}
-          slot-name: ${{ secrets.AZUREAPPSERVICE_SLOT_NAME }}
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
-          package: .
+  #     - name: "Run Azure webapp deploy action using publish profile credentials"
+  #       uses: azure/webapps-deploy@v2
+  #       with:
+  #         app-name: ${{ secrets.AZUREAPPSERVICE_APP_NAME }}
+  #         slot-name: ${{ secrets.AZUREAPPSERVICE_SLOT_NAME }}
+  #         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
+  #         package: .
