--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -1,12 +1,12 @@
 name: Virtual Visits CI
 
 on:
-  # push:
-  #   branches:
-  #     - master
-  #   paths-ignore:
-  #     - "README.md"
-  #     - "docs/**"
+  push:
+    branches:
+      - master
+    paths-ignore:
+      - "README.md"
+      - "docs/**"
 
   pull_request:
     paths-ignore:
