test: subject: test deployment1

--- a/.github/workflows/gha-push-ci.yml
+++ b/.github/workflows/gha-push-ci.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
-      - "README.md"
-      - "docs/**"
+    # paths-ignore:
+    #   - "README.md"
+    #   - "docs/**"
 
 jobs:
   tag-and-release:
