Remove accidental logs and commitlint

--- a/package.json
+++ b/package.json
@@ -80,8 +80,6 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
     "babel-eslint": "^10.1.0",
     "cypress": "^6.2.1",
     "cypress-audit": "^0.3.0",
@@ -95,8 +93,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "npx commitlint -E HUSKY_GIT_PARAMS"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
