--- a/.github/workflows/gha-push-ci.yml
+++ b/.github/workflows/gha-push-ci.yml
@@ -12,9 +12,6 @@ jobs:
   tag-and-release:
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v2
-      # - uses: actions/checkout@master
-
       - name: Conventional Changelog Action
         uses: TriPSs/conventional-changelog-action@v3
         id: changelog
@@ -30,9 +27,23 @@ jobs:
           cd release
           ls -la
 
+      # - name: "Run Azure webapp deploy action using publish profile credentials"
+      #   uses: azure/webapps-deploy@v2
+      #   # uses: actions/checkout@master
+      #   with:
+      #     app-name: ${{ secrets.AZUREAPPSERVICE_APP_NAME }}
+      #     slot-name: ${{ secrets.AZUREAPPSERVICE_SLOT_NAME }}
+      #     publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1354ACBB1422489280969781D23BDAC6 }}
+      #     package: .
+
+  azure-deploy:
+    needs: tag-and-release
+    if: github.repository_owner == 'madetech'
+    runs-on: ubuntu-latest
+
+    steps:
       - name: "Run Azure webapp deploy action using publish profile credentials"
         uses: azure/webapps-deploy@v2
-        # uses: actions/checkout@master
         with:
           app-name: ${{ secrets.AZUREAPPSERVICE_APP_NAME }}
           slot-name: ${{ secrets.AZUREAPPSERVICE_SLOT_NAME }}
