--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dev": "NODE_ENV=development node server.js",
     "prepare-db-and-start": "npm run create-dev-db; npm run dbmigrate up && npm run start",
     "create-dev-db": "db-migrate db:create \"nhs-virtual-visit-dev\"",
-    "start": "NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production-mssql npm run dbmigrate-prod-mssql up:mssql && node server.js",
     "cleandb": "node db/scripts/cleanup_scheduled_calls.js",
     "db:seed": "node db/scripts/seed_database.js",
     "dbmigrate": "db-migrate --migrations-dir 'db/migrations/'",
