Test production dbmigrate

--- a/.github/workflows/gha-push-ci.yml
+++ b/.github/workflows/gha-push-ci.yml
@@ -19,15 +19,15 @@ jobs:
           github-token: ${{ secrets.github_token }}
           output-file: "CHANGELOG.md"
 
-      - name: Create Release Folder
-        run: rsync -arv --exclude='.git/' --exclude='.github/' --exclude='.gitignore' --exclude='__mocks__/' --exclude='test/' --exclude='docs/' --exclude='docker/' --exclude='cypress*' --exclude='jest.*' --exclude='contractTest/' --exclude='node_modules/' . ./release
-
   azure-deploy:
     needs: tag-and-release
     if: github.repository_owner == 'madetech'
     runs-on: ubuntu-latest
 
     steps:
+      - name: Create Release Folder
+        run: rsync -arv --exclude='.git/' --exclude='.github/' --exclude='.gitignore' --exclude='__mocks__/' --exclude='test/' --exclude='docs/' --exclude='docker/' --exclude='cypress*' --exclude='jest.*' --exclude='contractTest/' --exclude='terraform/' --exclude='node_modules/' . ./release
+
       - name: Switch to Release Folder
         run: |
           cd release
