--- a/docker/mssql/local/docker-compose.yml
+++ b/docker/mssql/local/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   mssql:
     image: mcr.microsoft.com/mssql/server:2017-GA-ubuntu
-    container_name: nhs-virtual-visit-dev
+    container_name: nhs-virtual-visit
     ports:
       - 1433:1433
     volumes:
