--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
     "@sentry/browser": "^5.30.0",
     "@sentry/node": "^5.30.0",
     "@sentry/webpack-plugin": "^1.11.1",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "babel-jest": "^26.3.0",
@@ -53,7 +51,7 @@
     "db-migrate-pg": "^1.2.1",
     "dotenv-load": "^2.0.0",
     "express": "^4.17.1",
-    "google-libphonenumber": "^3.2.9",
+    "google-libphonenumber": "^3.2.16",
     "heroku-ssl-redirect": "0.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "jest": "^26.4.2",
@@ -69,7 +67,7 @@
     "next-env": "^1.1.1",
     "nhsuk-frontend": "^3.1.0",
     "node-sass": "^4.14.0",
-    "nookies": "^2.5.1",
+    "nookies": "^2.5.2",
     "notifications-node-client": "^4.7.3",
     "pg-promise": "^10.9.1",
     "query-string": "^6.13.8",
@@ -81,6 +79,9 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
     "babel-eslint": "^10.1.0",
     "cypress": "^6.3.0",
     "cypress-audit": "^0.3.0",
