--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
     "babel-eslint": "^10.1.0",
     "cypress": "^6.3.0",
     "cypress-audit": "^0.3.0",
